<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">蓝蓝海淘助理</string>
    <string name="bar_search">搜索</string>
    <string name="bt_notification">提醒</string>
    <string name="tab_brief">记录</string>
    <string name="tab_action">交易</string>
    <string name="tab_storage">仓库</string>
    <string name="tab_other">扩展</string>
    <string name="filtertitle_brand">品牌 BRAND</string>
    <string name="filtertitle_type">类型 TYPE</string>
    <string name="filtertitle_source">货源 SOURCE</string>
    <string name="filtertitle_customer">顾客 CUSTOMER</string>
    <string name="default_amount">0</string>
    <string name="default_price">￥0.0</string>
    <string name="confirm_receive">确认收货</string>
    <string name="confirm_post">确认发货</string>
    <string name="shipment_cost">邮费</string>

</resources>