<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/normal_view_height"
        android:orientation="horizontal" >

        <CheckedTextView
            android:id="@+id/cb_selectall_sources"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center_vertical"
            android:text="@string/filtertitle_source" />

        <ImageButton
            android:id="@+id/bt_showall_sources"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/bt_options_show" />

        <ImageButton
            android:id="@+id/bt_page_prev"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/bt_page_prev" />

        <TextView
            android:id="@+id/tv_page_curr"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/bt_page_next"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/bt_page_next" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@drawable/bg_divider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/ly_bottom_panel"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/normal_view_height"
            android:layout_alignParentBottom="true" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/shipment_cost" />

            <EditText
                android:id="@+id/et_shipmentcost"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:focusableInTouchMode="false"
                android:gravity="center"
                android:hint="@string/default_price"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/bt_receive_confirm"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/confirm_receive" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@id/ly_bottom_panel"
            android:background="@drawable/bg_divider" />

        <ExpandableListView
            android:id="@+id/el_orders"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/ly_bottom_panel"
            android:layout_alignParentTop="true"
            android:layout_margin="5dp" >
        </ExpandableListView>

        <GridView
            android:id="@+id/gv_options_source"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_options"
            android:fadeScrollbars="true"
            android:gravity="center"
            android:numColumns="4"
            android:scrollbarFadeDuration="2000"
            android:stretchMode="columnWidth"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>